--- a/spanish-app/package.json
+++ b/spanish-app/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "text-to-speech-js": "^1.1.11",
+    "tone": "^15.1.22",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
