--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mablo",
-  "name": "Spanish Learning App",
+  "short_name": "Masblo",
+  "name": "Learn Spanish and practice your skills with Masblo",
   "icons": [
     {
       "src": "favicon.ico",
