--- a/spanish-app/package.json
+++ b/spanish-app/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.542.0",
+    "phosphor-react": "^1.4.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
